Stopped using deprecated new for several Boxed types